Add Hide Ship Phase

--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ body{
     text-align: center;
 }
 
-.not-hit {
+.show {
     background-color: yellow;
 }
 
@@ -44,4 +44,8 @@ body{
 
 .miss {
     background-color: aqua;
+}
+
+.moving {
+    opacity: 80%;
 }
