--- a/css/main.css
+++ b/css/main.css
@@ -11,9 +11,11 @@ body{
     flex: 1;
 
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+
 
 #p1-div {
     background-color: maroon;
